--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cal",
+  "name": "cal-huynhnhon",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "mathjs": "^5.1.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -31,6 +32,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mathjs": "^4.4.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
